[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobamp"
version = "0.2.2"
requires-python = ">=3.6"
description = "cobamp - pathway analysis methods for genome-scale metabolic models"
readme = "README.rst"
authors = [
    { name = "Vítor Vieira", email = "vvieira@ceb.uminho.pt" }
]
license = { file = "LICENSE.txt" }
keywords = ["pathway analysis", "metabolic model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "indexed>=1.2.1",
    "pandas>=1.3.5",
    "scipy>=1.7.3",
    "numpy>=1.21.6",
    "matplotlib>=3.5.2",
    "optlang>=1.5.2",
    "pathos>=0.2.9",
    "boolean.py>=3.8"
]

[project.urls]
Homepage = "https://github.com/BioSystemsUM/cobamp"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]